--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     }
     section {
       padding: 6rem 2rem;
-      max-width: 1000px;
-      margin: auto;
+      max-width: 900px;
+      margin: 0 auto 0 80px;
       opacity: 0;
       transform: translateY(30px);
       transition: all 0.6s ease;
