--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     .navbar nav {
       display: flex;
       flex-wrap: wrap;
-      justify-content: flex-end;
+      justify-content: center;
       flex: 1;
     }
     .navbar a {
@@ -74,7 +74,7 @@
     section {
       padding: 6rem 2rem;
       max-width: 900px;
-      margin: 0 auto 0 80px;
+      margin: 0 auto;
       opacity: 0;
       transform: translateY(30px);
       transition: all 0.6s ease;
@@ -150,7 +150,7 @@
 <div class="scroll-title" id="scrollTitle">QUINCA PLUS</div>
 
 <!-- Vide pour forcer le scroll avant l'apparition de la présentation -->
-<div style="height: 100vh;"></div>
+<div style="height: 60vh;"></div>
 
 <section id="presentation">
   <h2>Présentation</h2>
