--- a/index.html
+++ b/index.html
@@ -187,7 +187,18 @@
       0% { left: -50%; }
       100% { left: 100%; }
     }
-</style>
+.click-anim {
+      animation: clickFlash 0.4s ease;
+    }
+    @keyframes clickFlash {
+      0% { transform: scale(1); }
+      50% { transform: scale(0.95); background-color: #ffc; }
+      100% { transform: scale(1); }
+    }
+    .scroll-title.hidden {
+      display: none;
+    }
+  </style>
 </head>
 <body>
 
@@ -270,6 +281,26 @@
       }
     });
   });
+  // Animation au clic sur les boutons et liens du menu
+  document.querySelectorAll('a, .btn').forEach(el => {
+    el.addEventListener('click', () => {
+      el.classList.add('click-anim');
+      setTimeout(() => el.classList.remove('click-anim'), 400);
+    });
+  });
+
+  // Cacher le titre 3D quand la présentation entre en vue
+  const observer = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        title.classList.add('hidden');
+      } else {
+        title.classList.remove('hidden');
+      }
+    });
+  }, { threshold: 0.4 });
+
+  observer.observe(document.getElementById('presentation'));
 </script>
 
 </body>
