--- a/index.html
+++ b/index.html
@@ -217,8 +217,9 @@
 
 <div class="scroll-title" id="scrollTitle">QUINCA PLUS</div>
 
+
 <!-- Vide pour forcer le scroll avant l'apparition de la présentation -->
-<!-- Suppression du faux scroll -->
+<div style="height: 90vh;"></div>
 
 <section id="presentation">
   <h2>Présentation</h2>
