--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
 
 <!-- Vide pour forcer le scroll avant l'apparition de la présentation -->
-<div style="height: 90vh;"></div>
+
 
 <section id="presentation">
   <h2>Présentation</h2>
@@ -245,7 +245,7 @@
 
 <section id="localisation">
   <h2>Où nous trouver ?</h2>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.647187733875!2d-60.99969788883917!3d14.602688576177047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c40e6f31cf70001%3A0xb1b15479c563777d!2sZone%20Industrielle%20Cocotte%20Canal%2C%2097224%20Ducos%2C%20Martinique!5e0!3m2!1sfr!2sfr!4v1716461226945!5m2!1sfr!2sfr" allowfullscreen=""></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.640140537145!2d-60.99834448883915!3d14.603002376174862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c40e6f97bd00f8d%3A0x33a2de7c6d34d3e4!2sQuincaillerie%20Quinca%20Plus%2C%20Zone%20Industrielle%20Cocotte%20Canal%2C%20Ducos%2C%20Martinique!5e0!3m2!1sfr!2sfr!4v1716464200000!5m2!1sfr!2sfr" allowfullscreen=""></iframe>
 </section>
 
 <section id="contact">
