--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
 </div>
 
 <div class="scroll-title" id="scrollTitle">QUINCA PLUS</div>
+<div style="height: 90vh;"></div>
 
 
 <!-- Vide pour forcer le scroll avant l'apparition de la présentation -->
@@ -243,10 +244,7 @@
   <a href="#contact" class="btn">Nous contacter</a>
 </section>
 
-<section id="localisation">
-  <h2>Où nous trouver ?</h2>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.6340346107777!2d-60.9980472!3d14.6032751!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c40e6f55b7110a3%3A0x90a144be8f20e65f!2sQuinca%20Plus!5e0!3m2!1sfr!2sfr!4v1716480000000!5m2!1sfr!2sfr" allowfullscreen=""></iframe>
-</section>
+
 
 <section id="contact">
   <h2>Contact</h2>
