--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
 
 
-<!-- Vide pour forcer le scroll avant l'apparition de la présentation -->
+<div style="height: 90vh;"></div>
 
 
 <section id="presentation">
