--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@
   </div>
   <nav>
     <a href="#presentation"><i class="fa-solid fa-user"></i> Présentation</a>
-    <a href="#produits"><i class="fa-solid fa-box"></i> Produits</a>
+    <a href="produits.html"><i class="fa-solid fa-box"></i> Produits</a>
+
     <a href="#localisation"><i class="fa-solid fa-location-dot"></i> Localisation</a>
     <a href="#contact"><i class="fa-solid fa-envelope"></i> Contact</a>
   </nav>
