--- a/produits.html
+++ b/produits.html
@@ -18,14 +18,17 @@
       display: flex;
       align-items: center;
       color: gold;
+      justify-content: space-between;
     }
     header img {
       height: 60px;
       margin-right: 1rem;
     }
     header h1 {
-      font-size: 2rem;
+      font-size: 3rem;
+      font-weight: 900;
       margin: 0;
+      text-transform: uppercase;
     }
     nav {
       background-color: #d4af37;
