--- a/produits.html
+++ b/produits.html
@@ -18,14 +18,17 @@
       display: flex;
       align-items: center;
       color: gold;
-      justify-content: space-between;
+    }
+    .logo-title {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
     }
     header img {
-      height: 60px;
-      margin-right: 1rem;
+      height: 70px;
     }
     header h1 {
-      font-size: 3rem;
+      font-size: 2.5rem;
       font-weight: 900;
       margin: 0;
       text-transform: uppercase;
@@ -76,8 +79,10 @@
 <body>
 
 <header>
-  <img src="logo-transparent.png" alt="Logo Quinca Plus">
-  <h1>QUINCA PLUS</h1>
+  <div class="logo-title">
+    <img src="logo-transparent.png" alt="Logo Quinca Plus">
+    <h1>QUINCA PLUS</h1>
+  </div>
 </header>
 
 <nav>
