--- a/produits.html
+++ b/produits.html
@@ -73,49 +73,30 @@
     <img src="logo-transparent.png" alt="Logo Quinca Plus">
     <div class="title-text">QUINCA PLUS</div>
   </div>
-  <nav>
-    <a href="#batiment">Bâtiment</a>
-    <a href="#ameublement">Ameublement</a>
-    <a href="#fixations">Fixations</a>
-    <a href="#colles">Colles & Silicones</a>
-    <a href="#peintures">Peintures</a>
-    <a href="#electro">Électroportatif</a>
-    <a href="#serrurerie">Serrurerie</a>
-    <a href="#autres">Autres</a>
+  <nav><a href="#promotions">Promotions</a>
   </nav>
 </div>
 
-<section id="batiment">
-  <h2>Bâtiment</h2>
-  <!-- Contenu à venir -->
-</section>
-<section id="ameublement">
-  <h2>Ameublement</h2>
-  <!-- Contenu à venir -->
-</section>
-<section id="fixations">
-  <h2>Fixations</h2>
-  <!-- Contenu à venir -->
-</section>
-<section id="colles">
-  <h2>Colles & Silicones</h2>
-  <!-- Contenu à venir -->
-</section>
-<section id="peintures">
-  <h2>Peintures</h2>
-  <!-- Contenu à venir -->
-</section>
-<section id="electro">
-  <h2>Électroportatif</h2>
-  <!-- Contenu à venir -->
-</section>
-<section id="serrurerie">
-  <h2>Serrurerie</h2>
-  <!-- Contenu à venir -->
-</section>
-<section id="autres">
-  <h2>Autres</h2>
-  <!-- Contenu à venir -->
+
+
+
+
+
+
+
+
+
+<section id="promotions">
+  <h2>Nos Promotions</h2>
+  <p style="text-align: center; font-style: italic;">Découvrez nos meilleures offres du moment sur une sélection de produits !</p>
+  <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 2rem; margin-top: 2rem;">
+    <div style="background: white; border: 2px solid #d4af37; border-radius: 10px; width: 250px; padding: 1rem; text-align: center; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
+      <img src="https://via.placeholder.com/200x200.png?text=Promo+Produit" alt="Produit Promo" style="width: 100%; border-radius: 6px;">
+      <h3 style="color: #a60000; margin: 1rem 0 0.5rem;">Vis à bois 4x40</h3>
+      <p style="margin: 0; font-weight: bold; color: #333;">Réf. VB4040</p>
+      <p style="color: #a60000; font-weight: bold; font-size: 1.2rem; margin-top: 0.5rem;">-25% de réduction</p>
+    </div>
+  </div>
 </section>
 
 </body>
