--- a/produits.html
+++ b/produits.html
@@ -91,13 +91,13 @@
   <p style="text-align: center; font-style: italic;">Découvrez nos meilleures offres du moment sur une sélection de produits !</p>
   <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 2rem; margin-top: 2rem;">
     <div style="background: white; border: 2px solid #d4af37; border-radius: 10px; width: 250px; padding: 1rem; text-align: center; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
-  <img src="https://cdn.pixabay.com/photo/2016/04/12/12/11/screw-1320214_960_720.jpg" alt="Produit Promo" style="width: 100%; border-radius: 6px;">
+  <img src="https://images.unsplash.com/photo-1581090700227-1e37b1904184?auto=format&fit=crop&w=400&q=80" alt="Produit Promo" style="width: 100%; border-radius: 6px;">
   <h3 style="color: #a60000; margin: 1rem 0 0.5rem;">Vis à bois 4x40</h3>
   <p style="margin: 0; font-weight: bold; color: #333;">Réf. VB4040</p>
   <p style="color: #a60000; font-weight: bold; font-size: 1.2rem; margin-top: 0.5rem;">-25% de réduction</p>
 </div>
 <div style="background: white; border: 2px solid #d4af37; border-radius: 10px; width: 250px; padding: 1rem; text-align: center; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
-  <img src="https://cdn.pixabay.com/photo/2018/03/04/20/55/plinth-3197186_960_720.jpg" alt="Plinthe PVC" style="width: 100%; border-radius: 6px;">
+  <img src="https://images.unsplash.com/photo-1601979031925-3ccdece9f1b1?auto=format&fit=crop&w=400&q=80" alt="Plinthe PVC" style="width: 100%; border-radius: 6px;">
   <h3 style="color: #a60000; margin: 1rem 0 0.5rem;">Plinthe PVC alu cuisine</h3>
   <p style="margin: 0; font-weight: bold; color: #333;">Réf. PLALU100</p>
   <p style="color: #a60000; font-weight: bold; font-size: 1.2rem; margin-top: 0.5rem;">-15% de réduction</p>
