--- a/produits.html
+++ b/produits.html
@@ -97,7 +97,7 @@
   <p style="color: #a60000; font-weight: bold; font-size: 1.2rem; margin-top: 0.5rem;">-25% de réduction</p>
 </div>
 <div style="background: white; border: 2px solid #d4af37; border-radius: 10px; width: 250px; padding: 1rem; text-align: center; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
-  <img src="images/plinthe-alu.jpg" alt="Plinthe PVC" style="width: 100%; border-radius: 6px;">
+  <img src="images/plinte alu pvc.jpg" alt="Plinthe PVC" style="width: 100%; border-radius: 6px;">
   <h3 style="color: #a60000; margin: 1rem 0 0.5rem;">Plinthe PVC alu cuisine</h3>
   <p style="margin: 0; font-weight: bold; color: #333;">Réf. PLALU100</p>
   <p style="color: #a60000; font-weight: bold; font-size: 1.2rem; margin-top: 0.5rem;">-15% de réduction</p>
