--- a/produits.html
+++ b/produits.html
@@ -70,10 +70,11 @@
 
 <div class="navbar">
   <div class="logo-title">
-    <img src="logo-transparent.png" alt="Logo Quinca Plus">
+    <a href="index.html"><img src="logo-transparent.png" alt="Logo Quinca Plus"></a>
     <div class="title-text">QUINCA PLUS</div>
   </div>
   <nav><a href="#promotions">Promotions</a>
+  <a href="index.html">Accueil</a>
   </nav>
 </div>
 
