--- a/produits.html
+++ b/produits.html
@@ -73,8 +73,9 @@
     <a href="index.html"><img src="logo-transparent.png" alt="Logo Quinca Plus"></a>
     <div class="title-text">QUINCA PLUS</div>
   </div>
-  <nav><a href="#promotions">Promotions</a>
-  <a href="index.html">Accueil</a>
+  <nav>
+    <a href="index.html" style="margin-right: auto;">Accueil</a>
+    <a href="#promotions">Promotions</a>
   </nav>
 </div>
 
