--- a/produits.html
+++ b/produits.html
@@ -73,8 +73,8 @@
     <a href="index.html"><img src="logo-transparent.png" alt="Logo Quinca Plus"></a>
     <div class="title-text">QUINCA PLUS</div>
   </div>
-  <nav>
-    <a href="index.html" style="margin-right: auto;">Accueil</a>
+  <nav style="flex: 1; display: flex; justify-content: center; gap: 2rem;">
+    <a href="index.html">Accueil</a>
     <a href="#promotions">Promotions</a>
   </nav>
 </div>
