--- a/produits.html
+++ b/produits.html
@@ -16,12 +16,14 @@
     .navbar {
       position: fixed;
       top: 0;
+      left: 0;
+      right: 0;
       width: 100%;
       background: #a60000;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 0.5rem 1rem;
+      padding: 0.5rem 2rem;
       z-index: 1000;
       flex-wrap: wrap;
     }
@@ -43,6 +45,7 @@
       flex-wrap: wrap;
       justify-content: center;
       flex: 1;
+      gap: 2rem;
     }
     .navbar a {
       color: gold;
